--- a/.github/actions/test_targets_json/action.yaml
+++ b/.github/actions/test_targets_json/action.yaml
@@ -1,24 +1,26 @@
-name: Test Targets JSON
-description: Parses test target JSON file
+name: Parse Test Target JSON
+description: 'Mocks parsing test targets by returning static list.'
+
+outputs:
+  test_targets_json:
+    description: "The list of test targets."
+    value: ${{ steps.parse.outputs.test_targets_json }}
+  test_targets_count:
+    description: "The number of test targets."
+    value: ${{ steps.parse.outputs.test_targets_count }}
+
 runs:
   using: "composite"
   steps:
-    - name: Download Test Targets Json
-      uses: actions/download-artifact@v4
-      with:
-        name: ${{ matrix.platform }}_test_targets_json
-        path:
-    - name: Test target count
-      id: parse-json
-      run: |
-        test_targets_json="$(cat test_targets.json | jq -cr '.test_targets')"
-        echo "test_targets_json=${test_targets_json}" >> $GITHUB_OUTPUT
-        echo "test_targets_count=$(echo "${test_targets_json}" | jq -cr 'length')" >> $GITHUB_OUTPUT
+    - name: Parse Test Targets
+      id: parse
       shell: bash
-outputs:
-  test_targets_count:
-    description: The number of test targets.
-    value: ${{ steps.parse-json.outputs.test_targets_count }}
-  test_targets_json:
-    description: The test targets in a JSON array.
-    value: '${{ steps.parse-json.outputs.test_targets_json }}'
+      run: |
+        # Use simple cat + jq to read static resource
+        test_targets_json=$(cat dotgithub/resources/test_targets.json)
+        # Ensure it's compact JSON string
+        test_targets_json=$(echo "$test_targets_json" | jq -c .)
+        echo "test_targets_json=$test_targets_json" >> $GITHUB_OUTPUT
+        
+        count=$(echo "$test_targets_json" | jq '. | length')
+        echo "test_targets_count=$count" >> $GITHUB_OUTPUT
