--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -80,7 +80,7 @@ jobs:
         continue-on-error: true
         env:
           TARGET_BRANCH: ${{ matrix.target_branch }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_ACTIONS_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           set -x
           git fetch origin ${TARGET_BRANCH}
@@ -114,7 +114,7 @@ jobs:
         continue-on-error: true
         uses: peter-evans/create-pull-request@2b011faafdcbc9ceb11414d64d0573f37c774b04 # v4.2.3
         with:
-          token: ${{ secrets.CHERRY_PICK_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           draft: ${{ steps.cherry-pick.outcome == 'failure' }}
           base: ${{ matrix.target_branch }}
           branch: ${{ env.CHERRY_PICK_BRANCH }}
@@ -131,7 +131,7 @@ jobs:
       - name: Comment on failure
         uses: actions/github-script@v8
         with:
-          github-token: ${{ secrets.CHERRY_PICK_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             if ('${{ steps.create-pr.outputs.pull-request-number }}' == '') {
               // Comment on the originating PR if creating a cherry pick PR failed.
